# histogram_equalization

./: CMakeLists.txt  he.c  he.h  main.c
